# vue-vet

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  clippy.toml  codecov.yml  justfile  rust-toolchain.toml  rustfmt.toml
.agents/docs/: README.md  architecture.md  conventions.md  goal.md  gotchas.md  reactivity-tracer.md  technology-stack.md
.agents/docs/research/: arxiv-harvest.json  arxiv-relevant.json  dblp-classics.json  dblp-harvest.json  reactivity-tracer-literature.md  s2-snowball.json
.github/workflows/: autofix.yml  ci.yml  codspeed.yml  coverage.yml
crates/vue-vet-cache/: Cargo.toml
crates/vue-vet-cache/src/: lib.rs
crates/vue-vet-cli/: Cargo.toml
crates/vue-vet-cli/src/: fixes.rs  main.rs
crates/vue-vet-cli/tests/: cli.rs  report_formats.rs
crates/vue-vet-config/: Cargo.toml
crates/vue-vet-config/src/: lib.rs
crates/vue-vet-core/: Cargo.toml
crates/vue-vet-core/src/: edits.rs  lib.rs
crates/vue-vet-oxc/: Cargo.toml
crates/vue-vet-oxc/src/: lib.rs
crates/vue-vet-oxc/tests/: reactivity_tracer.rs
crates/vue-vet-project/: Cargo.toml
crates/vue-vet-project/src/: lib.rs
crates/vue-vet-reactivity/: Cargo.toml
crates/vue-vet-reactivity/fixtures/: README.md
crates/vue-vet-reactivity/fixtures/real-world/: nuxt-async-data.json  pinia-store-to-refs.json  vue-router-current-route.json  vueuse-computed-async.json  vueuse-computed-eager.json
crates/vue-vet-reactivity/oracle/: README.md  harness.mjs  package.json  pnpm-lock.yaml
crates/vue-vet-reactivity/oracle/cases/: baseline-ref-computed.mjs  pause-tracking-window.mjs  props-reactive-object.mjs  reactive-member.mjs  runner-run-no-track.mjs  sync-every-hof.mjs  sync-filter-hof.mjs  sync-find-hof.mjs  sync-flatMap-hof.mjs  sync-forEach-hof.mjs  sync-map-hof.mjs  sync-reduce-hof.mjs  sync-some-hof.mjs  use-route-like.mjs  watch-effect-await.mjs  watch-effect-ref.mjs  watch-source-array.mjs  watch-source-getter.mjs  watch-source-ref.mjs
crates/vue-vet-reactivity/oracle/expected/: baseline-ref-computed.json  pause-tracking-window.json  props-reactive-object.json  reactive-member.json  runner-run-no-track.json  sync-every-hof.json  sync-filter-hof.json  sync-find-hof.json  sync-flatMap-hof.json  sync-forEach-hof.json  sync-map-hof.json  sync-reduce-hof.json  sync-some-hof.json  use-route-like.json  watch-effect-await.json  watch-effect-ref.json  watch-source-array.json  watch-source-getter.json  watch-source-ref.json
crates/vue-vet-reactivity/src/: lib.rs  modules.rs  oracle.rs  tests.rs
crates/vue-vet-reporters/: Cargo.toml
crates/vue-vet-reporters/src/: github.rs  lib.rs  sarif.rs
crates/vue-vet-rules/: Cargo.toml
crates/vue-vet-rules/src/: lib.rs
crates/vue-vet-rules/src/rules/: anchor_has_content.rs  button_has_content.rs  click_events_have_key_events.rs  iframe_has_title.rs  img_has_alt.rs  mod.rs  no_after_await_watch_effect_dependency.rs  no_aria_hidden_on_focusable.rs  no_autofocus.rs  no_conditional_watch_effect_dependency.rs  no_deprecated_slot_scope.rs  no_deprecated_v_on_native_modifier.rs  no_distracting_elements.rs  no_duplicate_define_emits.rs  no_duplicate_define_expose.rs  no_duplicate_define_options.rs  no_duplicate_define_props.rs  no_duplicate_define_slots.rs  no_mutating_props.rs  no_nonreactive_props_destructure.rs  no_positive_tabindex.rs  no_redundant_role.rs  no_unused_reactive_binding.rs  no_v_html.rs  no_v_if_with_v_for.rs  prefer_computed.rs  prefer_use_template_ref.rs  require_component_is.rs  require_v_for_key.rs  valid_aria_role.rs  valid_v_html.rs  valid_v_text.rs
crates/vue-vet-vize/: Cargo.toml
crates/vue-vet-vize/benches/: analyze_sfc.rs
crates/vue-vet-vize/src/: lib.rs
crates/vue-vet-vize/tests/: golden.rs
docs/: cache-baseline-diff.md  edit-model.md  json-output.md  project-graph.md  sarif-github.md  vize-compatibility.md
docs/adr/: 0001-analysis-stack.md
docs/rules/accessibility/: anchor-has-content.md  button-has-content.md  click-events-have-key-events.md  iframe-has-title.md  img-has-alt.md  no-aria-hidden-on-focusable.md  no-autofocus.md  no-distracting-elements.md  no-positive-tabindex.md  valid-aria-role.md
docs/rules/correctness/: no-deprecated-slot-scope.md  no-deprecated-v-on-native-modifier.md  no-duplicate-define-emits.md  no-duplicate-define-expose.md  no-duplicate-define-options.md  no-duplicate-define-props.md  no-duplicate-define-slots.md  no-v-if-with-v-for.md  require-component-is.md  require-v-for-key.md  valid-v-html.md  valid-v-text.md
docs/rules/maintainability/: no-redundant-role.md
docs/rules/reactivity/: no-after-await-watch-effect-dependency.md  no-conditional-watch-effect-dependency.md  no-mutating-props.md  no-nonreactive-props-destructure.md  no-unused-reactive-binding.md  prefer-computed.md  prefer-use-template-ref.md
docs/rules/security/: no-v-html.md
fixtures/: README.md  Unsafe.vue
fixtures/projects/basic/: App.vue
fixtures/projects/configured/: App.vue  vue-vet.toml
fixtures/projects/module-seeds/: App.vue
fixtures/projects/module-seeds/composables/: useField.ts
fixtures/projects/nuxt-graph/components/: AutoBadge.vue  UnusedPanel.vue
fixtures/projects/nuxt-graph/composables/: useAccount.ts
fixtures/projects/nuxt-graph/pages/: index.vue
fixtures/projects/suppressed/: App.vue
fixtures/projects/vue-3.4/: App.vue  package.json
fixtures/projects/vue-3.5/: App.vue  package.json
fixtures/reporters/: no-v-html.github  no-v-html.json  no-v-html.sarif  no-v-html.txt
fixtures/rules/no-after-await-watch-effect-dependency/invalid/: after-await.vue  then-callback.vue
fixtures/rules/no-after-await-watch-effect-dependency/valid/: explicit-watch.vue  read-before-await.vue
fixtures/rules/no-conditional-watch-effect-dependency/invalid/: guarded.vue
fixtures/rules/no-v-html/invalid/: multiline.vue  (+2 more)
fixtures/rules/recommended/: invalid.vue  valid.vue
fixtures/snapshots/no-v-html/: basic.json  multiline.json  multiple.json  unicode.json
fixtures/snapshots/parser/: unclosed-template.txt
(+65 files in other folders)
