[workspace]
members = [
  "crates/vue-vet-cli",
  "crates/vue-vet-cache",
  "crates/vue-vet-config",
  "crates/vue-vet-core",
  "crates/vue-vet-oxc",
  "crates/vue-vet-project",
  "crates/vue-vet-reactivity",
  "crates/vue-vet-rules",
  "crates/vue-vet-vize",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/alexzhang1030/vue-vet"
rust-version = "1.97"
readme = "README.md"
keywords = ["vue", "nuxt", "lint", "static-analysis"]
categories = ["development-tools"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
oxc_allocator = "=0.127.0"
oxc_ast = "=0.127.0"
oxc_parser = "=0.127.0"
oxc_semantic = "=0.127.0"
oxc_span = "=0.127.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
vize_atelier_sfc = "=0.291.0"
vize_atelier_core = "=0.291.0"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Vize's transitive graph currently contains parallel dependency major versions.
# Vue Vet cannot unify those versions without replacing or patching Vize.
multiple_crate_versions = "allow"

# Restriction lints intentionally selected by Rolldown. Enabling the entire
# restriction group would produce contradictory and impractical requirements.
allow_attributes = "deny"
assertions_on_result_states = "deny"
as_underscore = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
deref_by_slicing = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
expect_used = "deny"
exit = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
indexing_slicing = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
missing_assert_message = "deny"
mixed_read_write_in_expression = "deny"
panic = "deny"
panic_in_result_fn = "deny"
pathbuf_init_then_push = "deny"
precedence_bits = "deny"
print_stderr = "deny"
print_stdout = "deny"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
self_named_module_files = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
suspicious_xor_used_as_pow = "deny"
todo = "deny"
unimplemented = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unreachable = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
unused_result_ok = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
