[package]
name = "vue-vet-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Content-addressed cache, baselines, and diff filtering for Vue Vet"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
vue-vet-core = { path = "../vue-vet-core" }
vue-vet-project = { path = "../vue-vet-project" }
