[package]
name = "vue-vet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A Rust-native health check for Vue and Nuxt codebases"

[lints]
workspace = true

[dependencies]
clap.workspace = true
ignore.workspace = true
serde_json.workspace = true
vue-vet-core = { path = "../vue-vet-core" }
vue-vet-vize = { path = "../vue-vet-vize" }

[[bin]]
name = "vue-vet"
path = "src/main.rs"
