[package]
name = "vue-vet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A Rust-native health check for Vue and Nuxt codebases"

[lints]
workspace = true

[dependencies]
clap.workspace = true
ignore.workspace = true
serde_json.workspace = true
vue-vet-cache = { path = "../vue-vet-cache" }
vue-vet-core = { path = "../vue-vet-core" }
vue-vet-oxc = { path = "../vue-vet-oxc" }
vue-vet-project = { path = "../vue-vet-project" }
vue-vet-reactivity = { path = "../vue-vet-reactivity" }
vue-vet-reporters = { path = "../vue-vet-reporters" }
vue-vet-config = { path = "../vue-vet-config" }
vue-vet-rules = { path = "../vue-vet-rules" }
vue-vet-vize = { path = "../vue-vet-vize" }

[[bin]]
name = "vue-vet"
path = "src/main.rs"
