[package]
name = "vue-vet-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Configuration, presets, path filters, and suppressions for Vue Vet"

[lints]
workspace = true

[dependencies]
globset.workspace = true
serde.workspace = true
thiserror.workspace = true
vue-vet-core = { path = "../vue-vet-core" }
