[package]
name = "vue-vet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core diagnostics and scoring contracts for Vue Vet"

[lints]
workspace = true

[dependencies]
serde.workspace = true
