[package]
name = "vue-vet-oxc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Oxc-powered JavaScript and TypeScript semantic facts for Vue Vet"

[lints]
workspace = true

[dependencies]
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
thiserror.workspace = true
vue-vet-core = { path = "../vue-vet-core" }
vue-vet-reactivity = { path = "../vue-vet-reactivity" }

