[package]
name = "vue-vet-reporters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Deterministic text and machine-readable reporters for Vue Vet"

[lints]
workspace = true

[dependencies]
serde_json.workspace = true
vue-vet-core = { path = "../vue-vet-core" }
