[package]
name = "vue-vet-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Built-in semantic rules for Vue Vet"

[lints]
workspace = true

[dependencies]
vue-vet-core = { path = "../vue-vet-core" }
