[package]
name = "vue-vet-vize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Vize-powered Vue SFC analysis for Vue Vet"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
vize_atelier_core.workspace = true
vize_atelier_sfc.workspace = true
vue-vet-core = { path = "../vue-vet-core" }
vue-vet-oxc = { path = "../vue-vet-oxc" }
vue-vet-rules = { path = "../vue-vet-rules" }

[dev-dependencies]
divan = { version = "5.0.1", package = "codspeed-divan-compat" }
serde_json.workspace = true

[[bench]]
name = "analyze_sfc"
harness = false
